Fix build issues and add deployment tools
- Fixed Dockerfile package.json copying issue
- Added fallback input handling for local testing
- Optimized navigation timeouts and error handling
- Added build verification and testing scripts
- Created comprehensive deployment documentation
- All build checks now pass successfully

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "main": "src/main.js",
     "scripts": {
         "start": "node src/main.js",
-        "test": "echo \"No tests specified\" && exit 0"
+        "test": "node test-local.js",
+        "build": "node verify-build.js",
+        "verify": "node verify-build.js"
     },
     "author": "Tejas Rawool",
     "license": "MIT",
